--- a/web_static/3-index.html
+++ b/web_static/3-index.html
@@ -8,9 +8,8 @@
         <link rel="icon" href="images/icon.png"
     </head>
     <body>
-        <header class="logo">
-            <div>
-                <img src="images/logo.png" alt="logo">
+        <header>
+            <div class="logo">
             </div>
         </header>
         <footer> 
